Styles/_media.desktop.scss
/* ... */
.edge.hi-dpi .button-primary-leftcornerborder
{
    left: 0;
    top: 0;
}

.hi-dpi .button-primary-leftcornerhighlight
{
	left: 0;
	top: $border-thickness;
}

@-moz-document url-prefix()
{
    .hi-dpi .button-primary-leftcorner
    {
        border-top: ($corner-small + $border-thickness) solid $background-color;
        border-right: ($corner-small + $border-thickness) solid transparent;
    }
    
    .hi-dpi .button-primary-leftcornerborder
    {
        left: 0;
        top: 0;
    }

    .hi-dpi .button-primary-leftcornerhighlight
    {
        left: $border-thickness;
        top: $border-thickness;
    }
    
    .hi-dpi .button-primary-rightcornerborder
    {
        bottom: 0;
        right: 0;
    }

    .button-primary
    {
        min-height: 2.2em;
    }
    
    .button-primary-content
    {
        padding-top: 1px;
        padding-bottom: 4px;
        padding-left: 4px;
        padding-right: 6px;
    }
}

.button-inline
{   
    color: $secondary-text-color;
    background: $background-color;
    cursor: pointer;
    padding: 0;
    margin-top: -1pt;
    margin-bottom: 8pt;
    outline: none;
    border: none;
    font-family: $small-font;
    font-size: $small-font-size;
}

.button-secondary
{
    color: $accent-text-color;
    border-bottom: $border-thickness dotted $accent-text-color;
}

.button-inline:hover
{
    color: $primary-color;
}

.button-inline-toggled
{
    color: $accent-text-color;
}

.button-right
{
    min-width: 6.4em;
    margin-top: 3px;
    float: right;
}

.overlay
{
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 100;
    background: $background-color;
}

.logo
{
    position: absolute;
    left: 17px;
    top: 17px;
    width: 73px;
    height: 60px;
    font-size: 48pt;
    fill: $primary-color;
    color: $background-color;
}

.title-popup
{
    display: inline;
    color: $shadow-dark-color;
}

.navigation
{
    display: inline;
    position: absolute;
    margin-left: 1px;
    width: 88px;
    height: 66px;
}

.navigation-matte
{
    fill: $primary-color;
    z-index: 4;
}

.navigation-hover
{
    fill: $primary-hover-color;
    display: none;
    z-index: 5;
}

.navigation-border
{
    fill: $shadow-dark-color;
    z-index: 6;
}

.navigation-highlight
{
    fill: $primary-light-color;
    z-index: 7;
}

.navigation-selection
{
    z-index: 6;
    fill:$selection-color;
}

.navigation-selected,
.navigation-unselected
{
    margin-left: -1px;
}

.navigation-unselected
.navigation-selection
{
    display: none;
}

.navigation-selected
.navigation-border
{
    display: none;
}

.navigation-selected
.navigation-highlight
{
    display: none;
}

.navigation-afterselected.navigation-last
.navigation-highlight
{
    top: 3px;
    height: 62px;
}

.navigation-icon
{
    fill: $primary-text-color;
    z-index: 6;
    
    width: 18px;
    height: 18px;
    
    margin-left: 11px;
    margin-top: 20px;
}

.navigation-text
{
    padding-left: 12px;
    padding-top: 42px;
    height: auto;
    width: auto;
    color: $primary-text-color;
    font-size: $normal-font-size;
    z-index: 6;
}

.tags
{
    font-size: 0;
}

.tag
{
    display: inline-block;
    color: $accent-text-color;
    background: $accent-color;
    font-size: $small-font-size;
    text-decoration: none;
    line-height: $heading-font-size-medium;
    margin-left: 2pt;
    margin-right: 2pt;
    padding-top: 3pt;
    padding-bottom: 3.5pt;
    padding-left: 5.5pt;
    padding-right: 5pt;
    cursor: pointer;
}

.tag:before
{
    content: "";
    position: absolute;
    border-top: 8pt solid transparent;
    border-left: 8pt solid $background-color;
    margin-left: -6.5pt;
    margin-top: 8pt;
    cursor: default;
}

.tag:after
{
    content: "";
    position: absolute;
    float: right;
    border-bottom: 8pt solid transparent;
    border-right: 8pt solid $background-color;
    margin-left: -2pt;
    margin-top: -4.5pt;
    cursor: default;
}

.metadata
{
    font-family: $small-font;
    font-size: $small-font-size;
    color: $secondary-text-color;
    margin-top: -6pt;
    line-height: 16pt;
}

.article
{
    border-bottom: $border-thickness dotted $shadow-light-color;
}

.article-content
{
    margin-top: -6pt;
}

.placeholder
{
    color: $accent-text-color;
    background: $accent-color;
    padding-left: 5pt;
    padding-right: 5pt;
    padding-top: 3pt;
    padding-bottom: 3pt;
}

.placeholder:before
{
    content: "";
    position: absolute;
    border-top: 8pt solid transparent;
    border-left: 8pt solid $background-color;
    margin-left: -6.5pt;
    margin-top: 8pt;
    cursor: default;
}

.placeholder:after
{
    content: "";
    position: absolute;
    float: right;
    border-bottom: 8pt solid transparent;
    border-right: 8pt solid $background-color;
    margin-left: -2pt;
    margin-top: -4.5pt;
    cursor: default;
    cursor: default;
}

.icon-header
{
    display: inline;
    position: relative;
    fill: $secondary-text-color;
    top: 1.8pt;
}

.icon-button
{
    display: inline;
    position: relative;
    fill: $primary-text-color;
    top: $border-thickness * 3;
    margin-right: $border-thickness;
}

.comments
{
    margin-left: 1.5em;
    font-family: $small-font;
    font-size: $small-font-size;
    margin-bottom: -3pt;
}

.comment
{
    border-top: $border-thickness solid $shadow-color;
    padding-top: 5pt;
    margin-top: -3pt;
    padding-bottom: 5pt;
    margin-bottom: 3pt;
}

.comment-official
{
    background: $accent-light-color;
}

.comment-form
{
    margin-top: -3px;
    margin-bottom: -10px;
}

.full-width
{
    width: 100%;
}

.error
{
    color: $error-color;
    margin-bottom: 5pt;
}

.emphasis
{
    color: $primary-color;
}

.form-spacer-right
{
    float: right;
    width: 5pt;
    min-height: 10pt;
}

.form-spacer-left
{
    float: left;
    width: 11pt;
    min-height: 10pt;
}

.form-inline
{
    display: inline;
}
/* ... */

